# simple-content-ocr

./: .dockerignore  .env.example  .gitignore  CUSTOM_SERVER_API.md  CUSTOM_SERVER_SETUP.md  Dockerfile  Dockerfile.paddleocr  INSTALL_NVIDIA_TOOLKIT.md  Makefile  PADDLEOCR_VL_SETUP.md  PODMAN_QUICKSTART.md  QUICKSTART_CPU.md  QUICKSTART_GPU.md  QWEN2VL_SETUP.md  README.md  REMOTE_VLLM_QUICKSTART.md  docker-compose.paddleocr.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-server.txt  requirements.txt
docs/: DEEPSEEK_SETUP.md  OCR_ENGINES.md  PIPELINE.md  PODMAN_VLLM_SETUP.md  REMOTE_VLLM_SETUP.md  TESTING_GUIDE.md  getting-started.md
examples/: README.md  basic_usage.py  create_test_image.py  test_custom_server.py  test_local_file.py
openspec/: project.md
openspec/changes/add-ocr-processing-capability/: design.md  proposal.md  tasks.md
openspec/changes/add-ocr-processing-capability/specs/content-integration/: spec.md
openspec/changes/add-ocr-processing-capability/specs/job-processing/: spec.md
openspec/changes/add-ocr-processing-capability/specs/ocr-service/: spec.md
scripts/: run_paddleocr_server.py  setup.sh  start_paddleocr_server.sh
src/paddleocr_server/: __init__.py  model.py  prompts.py  schemas.py  server.py
src/simple_ocr/: __init__.py  config.py  main.py
src/simple_ocr/adapters/: __init__.py  base.py  content_client.py  deepseek_engine.py  factory.py  mock_engine.py  vllm_remote_engine.py
src/simple_ocr/models/: __init__.py  job.py
src/simple_ocr/routes/: __init__.py  ocr.py
src/simple_ocr/services/: __init__.py  ocr_service.py
src/simple_ocr/workers/: __init__.py  nats_worker.py
tests/: __init__.py  conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_ocr_adapters.py
